--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 body {
 
 font-family: Arial, Helvetica, sans-serif;
@@ -130,5 +132,33 @@ background-color: rgb(255, 103, 80);
  color: white;
 }
 
+/* phone views */
+
+@media (max-width: 700px) {
+#new {
+ display: none;
+}
+
+#def {
+font-size: medium;
+}
+
+#logo {
+font-size: small;
+}
+
+hr {
+ width: 150px;
+}
+
+.qinf {
+width: 300px;
+height: 50px;
+}
+
+#textbox {
+ width: 300px;
+}
 
 
+}
