--- a/style.css
+++ b/style.css
@@ -176,11 +176,12 @@ overflow-x: hidden;
 
 
 #def {
- font-size: 25px;
+ font-size: 15px;
 }
 
 .qinf {
  width: 235px;
+ height: 40px;
  font-size: 18px;
  overflow-x: hidden;
 }
