--- a/Yeardle/yeardle.css
+++ b/Yeardle/yeardle.css
@@ -23,6 +23,7 @@ body {
   font-weight: bold;
   letter-spacing: 1px;
   color: var(--high);
+  display: inline-block;
  }
  /* */
   #question {
@@ -116,7 +117,68 @@ body {
  
 
 
- /* */
+/* pop */
+
+#container5 {
+  display: flex;
+ justify-content: center;
+ align-items: center;
+ position: absolute;
+ width: 99%;
+ height: 99vh;
+ z-index: 4;
+ 
+ }
+ 
+ #pop {
+ opacity: 0.5;
+ background-color:black;
+ width: 100%;
+ height: 100%;
+ }
+ 
+ #inpop {
+  background-color: gray;
+  position: absolute;
+  z-index: 5;
+  height: 700px;
+  width: 600px;
+  padding: 20px;
+ }
+ 
+ #main3 {
+ color:white
+ }
+ 
+ .extra {
+ text-decoration: none;
+ display: block;
+ }
+ 
+ #close:hover {
+ opacity: 0.5;
+ cursor: pointer;
+ }
+ 
+ #clicker {
+  display: inline-block;
+  position: relative;
+  right:300px;
+  background-color: coral;
+  color:white;
+ border-radius: 50px;
+ width: 25px;
+ height: 25px;
+ cursor: pointer;
+ }
+ 
+ #clicker:hover {
+  opacity: 0.5;
+ }
+ 
+ #clicker:after {
+  opacity: 0.2;
+ }
  
  
  
