--- a/histordle/style.css
+++ b/histordle/style.css
@@ -18,6 +18,7 @@ hr {
  font-weight: bold;
  letter-spacing: 1px;
  color: white;
+ display: inline-block;
 }
 
 #container {
@@ -133,35 +134,67 @@ background-color: rgb(255, 103, 80);
  color: white;
 }
 /* pop */
-#containererror {
+
+#container5 {
  display: flex;
- justify-content: center;
- display: none;
+justify-content: center;
+align-items: center;
+position: absolute;
+width: 99%;
+height: 99vh;
+z-index: 4;
+
 }
 
-#errortext {
- background-color: rgb(24, 24, 24);
- color: white;
- border-width: 3px;
- border-color: coral;
- border-style: solid;
+#pop {
+opacity: 0.5;
+background-color:black;
+width: 100%;
+height: 100%;
+}
+
+#inpop {
+ background-color: gray;
  position: absolute;
- top: 70px;
- width: 300px;
-
+ z-index: 5;
+ height: 700px;
+ width: 600px;
+ padding: 20px;
 }
 
-#otherg {
-color: white;
-text-decoration:none;
+#main3 {
+color:white
 }
 
-#otherg:hover {
-color: beige;
-font-size: 45px;
-text-decoration:underline;
+.extra {
+text-decoration: none;
+display: block;
 }
 
+#close:hover {
+opacity: 0.5;
+cursor: pointer;
+}
+
+#clicker {
+ display: inline-block;
+ position: relative;
+ right:300px;
+ background-color: coral;
+ color:white;
+border-radius: 50px;
+width: 25px;
+height: 25px;
+cursor: pointer;
+}
+
+#clicker:hover {
+ opacity: 0.5;
+}
+
+#clicker:after {
+ opacity: 0.2;
+}
 
 /* phone views */
 
